# FootballManagerAI

./: .gitignore  CLAUDE.md  COMPLETION_SUMMARY.md  Cargo.toml  IMPLEMENTATION_COMPLETE.md  PROJECT_STATUS.md  README.md  config.json.example
docs/: llm-integration.md
docs/plans/: 2026-02-01-complete-remaining-features.md  2026-02-01-llm-integration-design.md  2026-02-01-llm-integration.md
src/: lib.rs  main.rs
src/ai/: design.md  events.rs  generator.rs  match_sim.rs  mod.rs  progression.rs  substitution.rs  tactical.rs  task.md  transfer_decision.rs
src/ai/llm/: client.rs  config.rs  error.rs  mod.rs  prompts.rs
src/ai/llm/generators/: game_gen.rs  mod.rs  player_gen.rs  team_gen.rs
src/data/: database.rs  design.md  finance_transaction_repo.rs  indexes.rs  integration_tests.rs  league_repo.rs  lineup_repo.rs  match_repo.rs  mod.rs  player_repo.rs  player_season_stats_repo.rs  repository.rs  save_manager.rs  scheduled_match_repo.rs  season_finance_report_repo.rs  task.md  team_finance_repo.rs  team_repo.rs  team_statistics_repo.rs  transfer_history_repo.rs  transfer_repo.rs
src/game/: design.md  events.rs  flow.rs  init.rs  loop.rs  mod.rs  notifications.rs  save.rs  state.rs  task.md
src/team/: attributes.rs  design.md  finance.rs  league.rs  match_result.rs  mod.rs  player.rs  player_stats.rs  tactics.rs  task.md  team.rs
src/transfer/: contract.rs  design.md  helpers.rs  market.rs  mod.rs  task.md  valuation.rs
src/ui/: app.rs  design.md  event.rs  i18n.rs  mod.rs  screens.rs  task.md
tests/: integration_tests.rs
