[package]
name = "football-manager-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["serde_json", "bundled"] }
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
