[package]
name = "football-manager-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["serde_json", "bundled"] }
ratatui = "0.29"
crossterm = "0.28"
uuid = { version = "1.0", features = ["v4"] }

# LLM 相关 - 使用 reqwest + serde 实现 OpenAI 兼容 API
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-stream = "0.3"

[dev-dependencies]
tempfile = "3.13"
